# athena

./: .dockerignore  Dockerfile  README.md  pyproject.toml
blog_scraper/blog_scraper/: main.py
blog_scraper/blog_scraper/blog_scraper/: data_validation.py  items.py  mongo_provider.py  pipelines.py  settings.py  types_.py
blog_scraper/blog_scraper/blog_scraper/spiders/: blog_scraper.py
