[tool.poetry]
name = "blog-scraper"
version = "0.1.0"
description = ""
authors = ["MiTiX . <bast.boulet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.2"
scrapy-selenium = "^0.0.7"
marshmallow = "^3.22.0"
pymongo = "^4.8.0"
flask = "^3.0.3"
crochet = "^2.1.1"
python-dotenv = "^1.0.1"
dateparser = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
